# AI-microprojects

./: Makefile  README.md  main.py  pyproject.toml
notebooks/: evaluation.ipynb
notebooks/maths/: calculus.ipynb  discrete_math.ipynb  linear_algebra.ipynb  probability.ipynb
